[gd_scene load_steps=8 format=3 uid="uid://u3rxnc0qfoau"]

[ext_resource type="Script" uid="uid://c5ryvii0njjp5" path="res://scripts/hud.gd" id="1_fls4u"]
[ext_resource type="FontFile" uid="uid://drfy77opnvp3b" path="res://Mystery Font.ttf" id="1_qpvh6"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="3_f6qnu"]
[ext_resource type="Texture2D" uid="uid://ccyiokr1jh0bb" path="res://images/palettes/questionPalette.png" id="4_k4w17"]
[ext_resource type="Texture2D" uid="uid://cvcplbwfbquim" path="res://images/hudcoin.png" id="5_twldb"]
[ext_resource type="Script" uid="uid://fg4m6pccgist" path="res://scripts/hudcoin.gd" id="6_f6qnu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cf6ij"]
shader = ExtResource("3_f6qnu")
shader_parameter/palette = ExtResource("4_k4w17")
shader_parameter/accessRow = 1

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fls4u")

[node name="WorldLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.642
anchor_right = 0.642
offset_left = -60.056
offset_top = 48.0
offset_right = 109.94397
offset_bottom = 72.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_qpvh6")
theme_override_font_sizes/normal_font_size = 24
text = "WORLD
"

[node name="TimerLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -167.0
offset_top = 48.0
offset_right = -34.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("1_qpvh6")
theme_override_font_sizes/normal_font_size = 24
text = "TIME"

[node name="CharacterLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 72.0
offset_top = 48.0
offset_right = 433.0
offset_bottom = 72.0
theme_override_fonts/normal_font = ExtResource("1_qpvh6")
theme_override_font_sizes/normal_font_size = 24
text = "MARIO"
scroll_active = false

[node name="LevelLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.642
anchor_right = 0.642
offset_left = -36.056
offset_top = 72.0
offset_right = 276.94397
offset_bottom = 96.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_qpvh6")
theme_override_font_sizes/normal_font_size = 24
text = "1-1"

[node name="ScoreLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 72.0
offset_top = 72.0
offset_right = 360.0
offset_bottom = 112.0
theme_override_fonts/normal_font = ExtResource("1_qpvh6")
theme_override_font_sizes/normal_font_size = 24
text = "000000"

[node name="CoinLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.422
anchor_right = 0.422
offset_left = -36.096
offset_top = 72.0
offset_right = 9185.9
offset_bottom = 112.0
theme_override_fonts/normal_font = ExtResource("1_qpvh6")
theme_override_font_sizes/normal_font_size = 24
text = "*00"

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_cf6ij")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.422
anchor_right = 0.422
offset_left = -60.096
offset_top = 72.0
offset_right = -36.096
offset_bottom = 95.0
texture = ExtResource("5_twldb")
script = ExtResource("6_f6qnu")

[node name="Timer" type="Timer" parent="."]
autostart = true
